Refactored security package structure, Basic JWT and user creation now functional through swagger, using h2 for db development
