# src/main/java/com/gd/clinic/entities/User.java
@@ -1,30 +1,0 @@
-package com.gd.clinic.entities;
-
-import lombok.AllArgsConstructor;
-import lombok.Data;
-import lombok.NoArgsConstructor;
-import org.springframework.stereotype.Component;
-
-import javax.persistence.*;
-
-@Component
-@Entity
-@Data
-@AllArgsConstructor
-@NoArgsConstructor
-@Table(name = "Users")
-public class User {
-
-    @Id
-    @GeneratedValue(strategy = GenerationType.AUTO)
-    private String id;
-
-    private String firstName;
-
-    private String lastName;
-
-    private String userName;
-
-    private String password;
-
-}
